test/io/sungeun/ioerror.EPERM.good
ioerror.chpl:9: error: uncaught error - Operation not permitted EPERM with path "this/is/my/path" offset -1
